# tildr

./: .editorconfig  .gitattributes  .gitignore  .nvim.lua  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  ENVIRONMENT.md  LICENSE  LICENSE-THIRD-PARTY.md  Makefile  README.md  SECURITY.md  cliff.toml  rust-toolchain.toml
.cargo/: config.toml
.cspell/: custom-dictionary-workspace.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/brand/: LICENSE-LOGOTYPE.md
.github/workflows/: ci.yml  release.yml
crates/tildr-cli/: Cargo.toml
crates/tildr-cli/src/: completions.rs  lib.rs  parser.rs
crates/tildr-cli/src/commands/: add.rs  apply.rs  backup.rs  cat.rs  clean.rs  completions.rs  convert.rs  del.rs  doctor.rs  edit.rs  exclude.rs  git.rs  group.rs  import.rs  info.rs  init.rs  list.rs  mod.rs  mv.rs  open.rs  profile.rs  repo.rs  restore.rs  secret.rs  snapshot.rs  source_path.rs  stats.rs  status.rs  suggest.rs  sync.rs  unlink.rs
crates/tildr-commands/: Cargo.toml
crates/tildr-commands/src/: add.rs  apply.rs  backup.rs  cat.rs  clean.rs  docs.rs  edit.rs  exclude.rs  git.rs  group.rs  import.rs  info.rs  init.rs  lib.rs  list.rs  mv.rs  open.rs  profile.rs  repo.rs  secret.rs  snapshot.rs  source_path.rs  stats.rs  status.rs  suggest.rs
crates/tildr-commands/src/del/: mod.rs  run.rs
crates/tildr-commands/src/doctor/: checks.rs  mod.rs  output.rs  utils.rs
crates/tildr-commands/src/restore/: mod.rs  run.rs
crates/tildr-commands/src/sync/: git.rs  mod.rs  output.rs  scenario.rs
crates/tildr-commands/src/tests/: add.rs  apply.rs  doctor.rs  group.rs  list.rs  mod.rs  mv.rs  profile.rs  restore.rs  status.rs  sync.rs  target.rs
crates/tildr-commands/src/unlink/: mod.rs  run.rs
crates/tildr-commands/src/utils/: auto_commit.rs  confirm.rs  executor.rs  mod.rs  ops.rs  target.rs  tildrignore.rs
crates/tildr-core/: Cargo.toml  build.rs
crates/tildr-core/src/: build_info.rs  config.rs  constants.rs  context.rs  errors.rs  file_manager.rs  lib.rs  pick.rs
crates/tildr-core/src/tests/: config.rs
crates/tildr-crypto/: Cargo.toml
crates/tildr-crypto/src/: detect.rs  gpg.rs  lib.rs  manifest.rs
crates/tildr-crypto/src/tests/: manifest.rs
crates/tildr-domain/: Cargo.toml
crates/tildr-domain/src/: commands.rs  git.rs  info.rs  lib.rs  repo.rs
crates/tildr-fs/: Cargo.toml
crates/tildr-fs/src/: lib.rs  paths.rs  symlink.rs  utils.rs
crates/tildr-fs/src/tests/: mod.rs  paths.rs  symlink.rs
crates/tildr-git/: Cargo.toml
crates/tildr-git/src/: integration.rs  lib.rs
crates/tildr-git/src/tests/: integration.rs
crates/tildr-repo/: Cargo.toml
crates/tildr-repo/src/: ignore.rs  lib.rs  manager.rs  scanner.rs
crates/tildr-repo/src/tests/: scanner.rs
crates/tildr-ui/: Cargo.toml
crates/tildr-ui/src/: color.rs  lib.rs  output.rs  prompt.rs  symbols.rs
crates/tildr-ui/src/tests/: ansi_sequences_columns.rs  output.rs  symbols.rs
crates/tildr-utils/: Cargo.toml
crates/tildr-utils/src/: confirm.rs  fs.rs  lib.rs  macros.rs  ops.rs  output.rs  pager.rs  sys.rs  traits.rs
crates/tildr-utils/src/tests/: fs.rs  move_to_trash.rs
docs/man/: README.md  tildr-commands.md  tildr-config.md  tildr-plugins.md  tildr-security.md  tildr.md
docs/md/: documentation.md
docs/md/site/: commands.md  configuration.md  ignore-support.md  index.md  path-resolution.md  plugins.md  quick-start.md  repository-model.md  secret-management.md
docs/site/: commands.md  configuration.md  ignore-support.md  index.md  path-resolution.md  plugins.md  quick-start.md  repository-model.md  secret-management.md
hooks/: README.md  commit-msg  pre-commit
tildr/: Cargo.toml
tildr/src/: main.rs
tools/installers/: README.md  linux.sh  macos.sh
tools/plugins/dolphin/: tildr.desktop
tools/plugins/nautilus/: tildr.py
tools/scripts/: sync-docs-version.sh
