[workspace]
resolver = "2"
members = ["crates/*", "tildr"]

[workspace.package]
version = "0.2.0"
authors = ["William <https://williamcanin.github.io>"]
edition = "2024"
homepage = "https://orbitbits.github.io/tildr/"
license = "Elastic License 2.0"
readme = "README.md"
repository = "https://github.com/orbitbits/tildr"
rust-version = "1.90.0"
description = "Manage your HOME files and directories with symlinks and Git."

[workspace.metadata.tildr]
keywords = ["CLI", "dotfiles", "synchronization", "declarative", "reproducible"]
categories = ["command-line-utilities"]
documentation = "https://orbitbits.github.io/tildr/documentation/"
maintainer = "OrbitBits <https://orbitbits.github.io>"
copyright = "© 2026 OrbitBits. All rights reserved."

[workspace.dependencies]

# -------- built-in --------
tildr-cli      = { path = "crates/tildr-cli" }
tildr-fs       = { path = "crates/tildr-fs" }
tildr-repo     = { path = "crates/tildr-repo" }
tildr-ui       = { path = "crates/tildr-ui" }
tildr-core     = { path = "crates/tildr-core" }
tildr-utils    = { path = "crates/tildr-utils" }
tildr-commands = { path = "crates/tildr-commands" }
tildr-git      = { path = "crates/tildr-git" }
tildr-domain   = { path = "crates/tildr-domain" }
tildr-crypto   = { path = "crates/tildr-crypto" }

# -------- vendors --------
clap            = { version = "=4.5.4", features = ["derive"] }
anyhow          = "1.0.101"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
console         = "0.16.2"
toml            = "1.1.2"
thiserror       = "2.0.18"
dirs            = "6.0.0"
walkdir         = "2"
dialoguer       = "0.12"
crossterm       = "0.29.0"
trash           = "5.2.6"
ignore          = "0.4.25"
libc            = "0.2.186"
rfd             = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
open            = "5"
chrono          = "0.4"

# -------- optimization dev --------
[profile.dev.package."*"]
opt-level = 0
incremental = true
debug = true

# -------- optimization release --------
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = false
