[workspace]
resolver = "2"
members = ["crates/*", "tildr"]

[workspace.package]
version = "0.3.1"
authors = ["William <https://williamcanin.github.io>"]
edition = "2024"
homepage = "https://orbitbits.github.io/tildr/"
license = "Elastic License 2.0"
readme = "README.md"
repository = "https://github.com/orbitbits/tildr"
rust-version = "1.90.0"
description = "Manage and reproduce your HOME directory declaratively."

[workspace.metadata.tildr]
keywords = ["CLI", "dotfiles", "synchronization", "declarative", "reproducible"]
categories = ["command-line-utilities"]
documentation = "https://orbitbits.github.io/tildr/documentation/"
maintainer = "OrbitBits <https://orbitbits.github.io>"
copyright = "© 2026 OrbitBits. All rights reserved."

[workspace.dependencies]

# -------- built-in --------
tildr-cli      = { path = "crates/tildr-cli" }
tildr-fs       = { path = "crates/tildr-fs" }
tildr-repo     = { path = "crates/tildr-repo" }
tildr-ui       = { path = "crates/tildr-ui" }
tildr-core     = { path = "crates/tildr-core" }
tildr-utils    = { path = "crates/tildr-utils" }
tildr-commands = { path = "crates/tildr-commands" }
tildr-git      = { path = "crates/tildr-git" }
tildr-domain   = { path = "crates/tildr-domain" }
tildr-crypto   = { path = "crates/tildr-crypto" }

# -------- vendors --------
clap            = { version = "=4.6.4", features = ["derive"] }
clap_complete   = "=4.6.7"
anyhow          = "1.0.104"
serde           = { version = "1.0.229", features = ["derive"] }
serde_json      = "1.0.151"
console         = "0.16.4"
toml            = "1.1.2"
thiserror       = "2.0.19"
dirs            = "6.0.0"
walkdir         = "2"
dialoguer       = "0.12"
crossterm       = "0.29.0"
trash           = "5.2.6"
ignore          = "0.4.31"
libc            = "0.2.189"
rfd             = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
open            = "5"
chrono          = "0.4.45"
fuzzy-matcher   = "0.3"

# -------- optimization dev --------
[profile.dev.package."*"]
opt-level = 0
incremental = true
debug = true

# -------- optimization release --------
[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
lto = "thin"
panic = "abort"
