[package]
name = "tildr-core"
version.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
# -------- built-in --------
tildr-utils = { workspace = true }
tildr-fs    = { workspace = true }
tildr-repo  = { workspace = true }
tildr-ui    = { workspace = true }

# -------- vendors --------
serde           = { workspace = true }
anyhow          = { workspace =  true }
thiserror       = { workspace =  true }
dirs            = { workspace =  true }
toml            = { workspace = true }
dialoguer       = { workspace = true }
crossterm       = { workspace = true }
libc            = { workspace = true }
rfd             = { workspace = true }
fuzzy-matcher   = "0.3"
walkdir         = { workspace = true }
open            = { workspace = true }

# -------- build --------
[build-dependencies]
toml = { workspace = true }
