[package]
name = "tildr-fs"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
# -------- vendors --------
anyhow = { workspace = true }
dirs   = { workspace = true }
