[package]
name = "tildr-repo"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
tildr-utils = { workspace = true }

# -------- vendors --------
anyhow  = { workspace =  true }
ignore = { workspace =  true }
