[package]
name = "tildr-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]

# -------- built-in --------
tildr-fs = { workspace = true }
tildr-ui = { workspace = true }

# -------- vendors --------
anyhow = {workspace = true }
trash = { workspace = true }
